--- a/admin/css/charisma-app.css
+++ b/admin/css/charisma-app.css
@@ -475,6 +475,30 @@ color: #3986AC;
 .yellow {
 color: #F99406;
 }
+.gray{
+color:#666666;
+}
+.black{
+color:#000000;
+}
+.fontsize-big{
+font-size:17px;
+}
+.fontsize-14{
+font-size:14px;
+}
+.fontsize-13{
+font-size:13px;
+}
+.fontsize-12{
+font-size:12px;
+}
+.fontsize-11{
+font-size:11px;
+}
+.fontsize-small{
+font-size:8px;
+}
 .login-box{
 
 }
