--- a/zxUI/css/bootstrap-cerulean.css
+++ b/zxUI/css/bootstrap-cerulean.css
@@ -42,6 +42,7 @@ a:focus {
 }
 a:hover,
 a:active {
+ 
   outline: 0;
 }
 sub,
@@ -149,7 +150,7 @@ a {
 }
 a:hover {
   color: #2071a1;
-  text-decoration: underline;
+  text-decoration: none;
 }
 .row {
   margin-left: -20px;
@@ -2981,7 +2982,7 @@ input[type="submit"].btn.btn-mini {
   *position: relative;
   *z-index: 2;
   overflow: visible;
-  margin-bottom: 18px;
+  margin-bottom: 0px;
 }
 .navbar-inner {
   min-height: 40px;
